[INT-1512] Upgrade to Gradle 8, accommodate new IT plugin (#195)
* [INT-1512] Upgrade to Gradle 8, accommodate new IT plugin